# web_server_rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml
.github/workflows/: audit.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs
src/routes/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs
