[package]
name = "web_server_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webserver"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["macros", "tracing"] }
chrono = { version = "0.4.31", features = ["clock"] }
config = { version = "0.13.4", features = ["toml"] }
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde-aux = "4.3.1"
serde_json = "1.0.108"
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "rt"] }

[dev-dependencies]
fake = "2.9.1"
linkify = "0.10.0"
once_cell = "1.19.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.5.22"
